finished exersizes dom manipulation

--- a/2-dom-manipulation/exercises/1-change-text.html
+++ b/2-dom-manipulation/exercises/1-change-text.html
@@ -55,6 +55,9 @@
           document.getElementById('expected'),
         );
         mocha.run();
+
+        document.getElementById('actual').innerHTML = '<h1>hi!</h1>'
+
       </script>
     </section>
   </body>
