--- a/2-dom-manipulation/exercises/2-change-link.html
+++ b/2-dom-manipulation/exercises/2-change-link.html
@@ -62,6 +62,7 @@
           document.getElementById('expected'),
         );
         mocha.run();
+        document.querySelector('#actual a').innerText = 'learn about badgers'
       </script>
     </section>
   </body>
