--- a/2-dom-manipulation/exercises/3-update-list.html
+++ b/2-dom-manipulation/exercises/3-update-list.html
@@ -66,6 +66,8 @@
           document.getElementById('expected'),
         );
         mocha.run();
+
+        document.querySelector('#actual ul li').innerText = 'robots'
       </script>
     </section>
   </body>
