--- a/2-dom-manipulation/exercises/6-fix-the-list.html
+++ b/2-dom-manipulation/exercises/6-fix-the-list.html
@@ -68,6 +68,25 @@
           document.getElementById('expected'),
         );
         mocha.run();
+        
+        const listWrap = document.getElementById('actual')
+        const liEl = listWrap.querySelectorAll('ol li')
+        const ulEl = document.createElement('ul')
+        liEl.forEach((el, i) => {
+          if(i === 1) {
+            el.innerText = 'solar systems'
+          }
+          if(i !== liEl.length - 1) {
+            ulEl.appendChild(el)
+          } else {
+            return
+          }
+        })
+        const title = document.createElement('h1')
+        title.innerText = 'a list of things'
+        listWrap.appendChild(title)
+        listWrap.removeChild(listWrap.querySelector('ol'))
+        listWrap.appendChild(ulEl)
       </script>
     </section>
   </body>
